--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         </activity>
         <activity android:name=".Activity.MainScreenActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".Activity.DetailActivity" />
+        <activity android:name=".Activity.DetailActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
 
         <!--<activity
             android:name=".Activity.Main2Activity"
