--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".Activity.DetailActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".Activity.ProductBacklogList"
+            android:theme="@style/AppTheme.NoActionBar"/>
 
         <!--<activity
             android:name=".Activity.Main2Activity"
